minor fixes, offer section animation is finished, added eventlistener on mobile__item

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -19,7 +19,7 @@
 
 	&__heading {
 		position: relative;
-		left: 12vw;
+		left: 14vw;
 		top: 30px;
 		font-size: 1.5rem;
 		font-weight: 200;
@@ -28,7 +28,7 @@
 	&__text {
 		position: relative;
 		margin-right: 10vw;
-		left: 12vw;
+		left: 14vw;
 		top: 30px;
 		font-size: 2.8rem;
 		font-weight: bold;
