--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -60,7 +60,7 @@
 		position: relative;
 		display: flex;
 		margin: 0 auto;
-		margin-left: 10%;
+		margin-left: 12%;
 		padding: 0 1em;
 		align-items: center;
 		gap: 5px;
